Fix ui issues on firefox

--- a/src/components/MainMenu/styles.module.scss
+++ b/src/components/MainMenu/styles.module.scss
@@ -144,6 +144,7 @@ $largeMobileHeight: 700px;
                         border-radius: 50%;
                         width: 100%;
                         height: 100%;
+                        margin: 0;
                     }
                 }
                 .profilePictureUploadLabel {
